media/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:libtorrentv1
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - name: qbittorrent-config
          mountPath: /config
        - name: data
          mountPath: /data/downloads
          subPath: downloads
      - name: wireguard
        image: lscr.io/linuxserver/wireguard:latest
        securityContext:
          sysctls:
          - name: net.ipv4.conf.all.src_valid_mark
            value: "1"
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - name: wireguard-config-secret
          mountPath: /config/wg_confs
      volumes:
      - name: qbittorrent-config
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: data
        persistentVolumeClaim:
          claimName: media-data
      - name: wireguard-config-secret
        secret:
          secretName: wireguard-config-secret
