media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
  - port: 80
    targetPort: http
    name: http
